fix up sentence text chunking downloads